gosrv/pkg/initdb/y.output

state 0
	$accept: .TopLevel $end 

	OPEN  shift 12
	XCLOSE  shift 13
	XCREATE  shift 14
	INSERT_TUPLE  shift 15
	XDECLARE  shift 16
	XBUILD  shift 17
	.  error

	TopLevel  goto 1
	Boot_Queries  goto 2
	Boot_Query  goto 3
	Boot_OpenStmt  goto 4
	Boot_CloseStmt  goto 5
	Boot_CreateStmt  goto 6
	Boot_InsertStmt  goto 7
	Boot_DeclareIndexStmt  goto 8
	Boot_DeclareUniqueIndexStmt  goto 9
	Boot_DeclareToastStmt  goto 10
	Boot_BuildIndsStmt  goto 11

state 1
	$accept:  TopLevel.$end 

	$end  accept
	.  error


state 2
	TopLevel:  Boot_Queries.    (1)
	Boot_Queries:  Boot_Queries.Boot_Query 

	OPEN  shift 12
	XCLOSE  shift 13
	XCREATE  shift 14
	INSERT_TUPLE  shift 15
	XDECLARE  shift 16
	XBUILD  shift 17
	.  reduce 1 (src line 133)

	Boot_Query  goto 18
	Boot_OpenStmt  goto 4
	Boot_CloseStmt  goto 5
	Boot_CreateStmt  goto 6
	Boot_InsertStmt  goto 7
	Boot_DeclareIndexStmt  goto 8
	Boot_DeclareUniqueIndexStmt  goto 9
	Boot_DeclareToastStmt  goto 10
	Boot_BuildIndsStmt  goto 11

state 3
	Boot_Queries:  Boot_Query.    (2)

	.  reduce 2 (src line 136)


state 4
	Boot_Query:  Boot_OpenStmt.    (4)

	.  reduce 4 (src line 141)


state 5
	Boot_Query:  Boot_CloseStmt.    (5)

	.  reduce 5 (src line 143)


state 6
	Boot_Query:  Boot_CreateStmt.    (6)

	.  reduce 6 (src line 144)


state 7
	Boot_Query:  Boot_InsertStmt.    (7)

	.  reduce 7 (src line 145)


state 8
	Boot_Query:  Boot_DeclareIndexStmt.    (8)

	.  reduce 8 (src line 146)


state 9
	Boot_Query:  Boot_DeclareUniqueIndexStmt.    (9)

	.  reduce 9 (src line 147)


state 10
	Boot_Query:  Boot_DeclareToastStmt.    (10)

	.  reduce 10 (src line 148)


state 11
	Boot_Query:  Boot_BuildIndsStmt.    (11)

	.  reduce 11 (src line 149)


state 12
	Boot_OpenStmt:  OPEN.boot_ident 

	ID  shift 20
	.  error

	boot_ident  goto 19

state 13
	Boot_CloseStmt:  XCLOSE.boot_ident 
	Boot_CloseStmt:  XCLOSE.    (14)

	ID  shift 20
	.  reduce 14 (src line 167)

	boot_ident  goto 21

state 14
	Boot_CreateStmt:  XCREATE.boot_ident oidspec optbootstrap optsharedrelation optwithoutoids optrowtypeoid LPAREN $$15 boot_column_list $$16 RPAREN 

	ID  shift 20
	.  error

	boot_ident  goto 22

state 15
	Boot_InsertStmt:  INSERT_TUPLE.optoideq $$18 LPAREN boot_column_val_list RPAREN 
	optoideq: .    (43)

	OBJ_ID  shift 24
	.  reduce 43 (src line 400)

	optoideq  goto 23

state 16
	Boot_DeclareIndexStmt:  XDECLARE.INDEX boot_ident oidspec ON boot_ident USING boot_ident LPAREN boot_index_params RPAREN 
	Boot_DeclareUniqueIndexStmt:  XDECLARE.UNIQUE INDEX boot_ident oidspec ON boot_ident USING boot_ident LPAREN boot_index_params RPAREN 
	Boot_DeclareToastStmt:  XDECLARE.XTOAST oidspec oidspec ON boot_ident 

	INDEX  shift 25
	UNIQUE  shift 26
	XTOAST  shift 27
	.  error


state 17
	Boot_BuildIndsStmt:  XBUILD.INDICES 

	INDICES  shift 28
	.  error


state 18
	Boot_Queries:  Boot_Queries Boot_Query.    (3)

	.  reduce 3 (src line 138)


state 19
	Boot_OpenStmt:  OPEN boot_ident.    (12)

	.  reduce 12 (src line 152)


state 20
	boot_ident:  ID.    (51)

	.  reduce 51 (src line 430)


state 21
	Boot_CloseStmt:  XCLOSE boot_ident.    (13)

	.  reduce 13 (src line 160)


state 22
	Boot_CreateStmt:  XCREATE boot_ident.oidspec optbootstrap optsharedrelation optwithoutoids optrowtypeoid LPAREN $$15 boot_column_list $$16 RPAREN 

	ID  shift 20
	.  error

	boot_ident  goto 30
	oidspec  goto 29

state 23
	Boot_InsertStmt:  INSERT_TUPLE optoideq.$$18 LPAREN boot_column_val_list RPAREN 
	$$18: .    (18)

	.  reduce 18 (src line 276)

	$$18  goto 31

state 24
	optoideq:  OBJ_ID.EQUALS oidspec 

	EQUALS  shift 32
	.  error


state 25
	Boot_DeclareIndexStmt:  XDECLARE INDEX.boot_ident oidspec ON boot_ident USING boot_ident LPAREN boot_index_params RPAREN 

	ID  shift 20
	.  error

	boot_ident  goto 33

state 26
	Boot_DeclareUniqueIndexStmt:  XDECLARE UNIQUE.INDEX boot_ident oidspec ON boot_ident USING boot_ident LPAREN boot_index_params RPAREN 

	INDEX  shift 34
	.  error


state 27
	Boot_DeclareToastStmt:  XDECLARE XTOAST.oidspec oidspec ON boot_ident 

	ID  shift 20
	.  error

	boot_ident  goto 30
	oidspec  goto 35

state 28
	Boot_BuildIndsStmt:  XBUILD INDICES.    (23)

	.  reduce 23 (src line 322)


state 29
	Boot_CreateStmt:  XCREATE boot_ident oidspec.optbootstrap optsharedrelation optwithoutoids optrowtypeoid LPAREN $$15 boot_column_list $$16 RPAREN 
	optbootstrap: .    (28)

	XBOOTSTRAP  shift 37
	.  reduce 28 (src line 353)

	optbootstrap  goto 36

state 30
	oidspec:  boot_ident.    (41)

	.  reduce 41 (src line 390)


state 31
	Boot_InsertStmt:  INSERT_TUPLE optoideq $$18.LPAREN boot_column_val_list RPAREN 

	LPAREN  shift 38
	.  error


state 32
	optoideq:  OBJ_ID EQUALS.oidspec 

	ID  shift 20
	.  error

	boot_ident  goto 30
	oidspec  goto 39

state 33
	Boot_DeclareIndexStmt:  XDECLARE INDEX boot_ident.oidspec ON boot_ident USING boot_ident LPAREN boot_index_params RPAREN 

	ID  shift 20
	.  error

	boot_ident  goto 30
	oidspec  goto 40

state 34
	Boot_DeclareUniqueIndexStmt:  XDECLARE UNIQUE INDEX.boot_ident oidspec ON boot_ident USING boot_ident LPAREN boot_index_params RPAREN 

	ID  shift 20
	.  error

	boot_ident  goto 41

state 35
	Boot_DeclareToastStmt:  XDECLARE XTOAST oidspec.oidspec ON boot_ident 

	ID  shift 20
	.  error

	boot_ident  goto 30
	oidspec  goto 42

state 36
	Boot_CreateStmt:  XCREATE boot_ident oidspec optbootstrap.optsharedrelation optwithoutoids optrowtypeoid LPAREN $$15 boot_column_list $$16 RPAREN 
	optsharedrelation: .    (30)

	XSHARED_RELATION  shift 44
	.  reduce 30 (src line 358)

	optsharedrelation  goto 43

state 37
	optbootstrap:  XBOOTSTRAP.    (27)

	.  reduce 27 (src line 351)


state 38
	Boot_InsertStmt:  INSERT_TUPLE optoideq $$18 LPAREN.boot_column_val_list RPAREN 

	CONST_P  shift 50
	ID  shift 20
	NULLVAL  shift 49
	.  error

	boot_const  goto 48
	boot_ident  goto 47
	boot_column_val_list  goto 45
	boot_column_val  goto 46

state 39
	optoideq:  OBJ_ID EQUALS oidspec.    (42)

	.  reduce 42 (src line 398)


state 40
	Boot_DeclareIndexStmt:  XDECLARE INDEX boot_ident oidspec.ON boot_ident USING boot_ident LPAREN boot_index_params RPAREN 

	ON  shift 51
	.  error


state 41
	Boot_DeclareUniqueIndexStmt:  XDECLARE UNIQUE INDEX boot_ident.oidspec ON boot_ident USING boot_ident LPAREN boot_index_params RPAREN 

	ID  shift 20
	.  error

	boot_ident  goto 30
	oidspec  goto 52

state 42
	Boot_DeclareToastStmt:  XDECLARE XTOAST oidspec oidspec.ON boot_ident 

	ON  shift 53
	.  error


state 43
	Boot_CreateStmt:  XCREATE boot_ident oidspec optbootstrap optsharedrelation.optwithoutoids optrowtypeoid LPAREN $$15 boot_column_list $$16 RPAREN 
	optwithoutoids: .    (32)

	XWITHOUT_OIDS  shift 55
	.  reduce 32 (src line 363)

	optwithoutoids  goto 54

state 44
	optsharedrelation:  XSHARED_RELATION.    (29)

	.  reduce 29 (src line 356)


state 45
	Boot_InsertStmt:  INSERT_TUPLE optoideq $$18 LPAREN boot_column_val_list.RPAREN 
	boot_column_val_list:  boot_column_val_list.boot_column_val 
	boot_column_val_list:  boot_column_val_list.COMMA boot_column_val 

	CONST_P  shift 50
	ID  shift 20
	NULLVAL  shift 49
	COMMA  shift 58
	RPAREN  shift 56
	.  error

	boot_const  goto 48
	boot_ident  goto 47
	boot_column_val  goto 57

state 46
	boot_column_val_list:  boot_column_val.    (44)

	.  reduce 44 (src line 403)


state 47
	boot_column_val:  boot_ident.    (47)

	.  reduce 47 (src line 409)


state 48
	boot_column_val:  boot_const.    (48)

	.  reduce 48 (src line 414)


state 49
	boot_column_val:  NULLVAL.    (49)

	.  reduce 49 (src line 418)


state 50
	boot_const:  CONST_P.    (50)

	.  reduce 50 (src line 424)


state 51
	Boot_DeclareIndexStmt:  XDECLARE INDEX boot_ident oidspec ON.boot_ident USING boot_ident LPAREN boot_index_params RPAREN 

	ID  shift 20
	.  error

	boot_ident  goto 59

state 52
	Boot_DeclareUniqueIndexStmt:  XDECLARE UNIQUE INDEX boot_ident oidspec.ON boot_ident USING boot_ident LPAREN boot_index_params RPAREN 

	ON  shift 60
	.  error


state 53
	Boot_DeclareToastStmt:  XDECLARE XTOAST oidspec oidspec ON.boot_ident 

	ID  shift 20
	.  error

	boot_ident  goto 61

state 54
	Boot_CreateStmt:  XCREATE boot_ident oidspec optbootstrap optsharedrelation optwithoutoids.optrowtypeoid LPAREN $$15 boot_column_list $$16 RPAREN 
	optrowtypeoid: .    (34)

	XROWTYPE_OID  shift 63
	.  reduce 34 (src line 368)

	optrowtypeoid  goto 62

state 55
	optwithoutoids:  XWITHOUT_OIDS.    (31)

	.  reduce 31 (src line 361)


state 56
	Boot_InsertStmt:  INSERT_TUPLE optoideq $$18 LPAREN boot_column_val_list RPAREN.    (19)

	.  reduce 19 (src line 287)


state 57
	boot_column_val_list:  boot_column_val_list boot_column_val.    (45)

	.  reduce 45 (src line 405)


state 58
	boot_column_val_list:  boot_column_val_list COMMA.boot_column_val 

	CONST_P  shift 50
	ID  shift 20
	NULLVAL  shift 49
	.  error

	boot_const  goto 48
	boot_ident  goto 47
	boot_column_val  goto 64

state 59
	Boot_DeclareIndexStmt:  XDECLARE INDEX boot_ident oidspec ON boot_ident.USING boot_ident LPAREN boot_index_params RPAREN 

	USING  shift 65
	.  error


state 60
	Boot_DeclareUniqueIndexStmt:  XDECLARE UNIQUE INDEX boot_ident oidspec ON.boot_ident USING boot_ident LPAREN boot_index_params RPAREN 

	ID  shift 20
	.  error

	boot_ident  goto 66

state 61
	Boot_DeclareToastStmt:  XDECLARE XTOAST oidspec oidspec ON boot_ident.    (22)

	.  reduce 22 (src line 316)


state 62
	Boot_CreateStmt:  XCREATE boot_ident oidspec optbootstrap optsharedrelation optwithoutoids optrowtypeoid.LPAREN $$15 boot_column_list $$16 RPAREN 

	LPAREN  shift 67
	.  error


state 63
	optrowtypeoid:  XROWTYPE_OID.oidspec 

	ID  shift 20
	.  error

	boot_ident  goto 30
	oidspec  goto 68

state 64
	boot_column_val_list:  boot_column_val_list COMMA boot_column_val.    (46)

	.  reduce 46 (src line 406)


state 65
	Boot_DeclareIndexStmt:  XDECLARE INDEX boot_ident oidspec ON boot_ident USING.boot_ident LPAREN boot_index_params RPAREN 

	ID  shift 20
	.  error

	boot_ident  goto 69

state 66
	Boot_DeclareUniqueIndexStmt:  XDECLARE UNIQUE INDEX boot_ident oidspec ON boot_ident.USING boot_ident LPAREN boot_index_params RPAREN 

	USING  shift 70
	.  error


state 67
	Boot_CreateStmt:  XCREATE boot_ident oidspec optbootstrap optsharedrelation optwithoutoids optrowtypeoid LPAREN.$$15 boot_column_list $$16 RPAREN 
	$$15: .    (15)

	.  reduce 15 (src line 175)

	$$15  goto 71

state 68
	optrowtypeoid:  XROWTYPE_OID oidspec.    (33)

	.  reduce 33 (src line 366)


state 69
	Boot_DeclareIndexStmt:  XDECLARE INDEX boot_ident oidspec ON boot_ident USING boot_ident.LPAREN boot_index_params RPAREN 

	LPAREN  shift 72
	.  error


state 70
	Boot_DeclareUniqueIndexStmt:  XDECLARE UNIQUE INDEX boot_ident oidspec ON boot_ident USING.boot_ident LPAREN boot_index_params RPAREN 

	ID  shift 20
	.  error

	boot_ident  goto 73

state 71
	Boot_CreateStmt:  XCREATE boot_ident oidspec optbootstrap optsharedrelation optwithoutoids optrowtypeoid LPAREN $$15.boot_column_list $$16 RPAREN 

	ID  shift 20
	.  error

	boot_ident  goto 76
	boot_column_list  goto 74
	boot_column_def  goto 75

state 72
	Boot_DeclareIndexStmt:  XDECLARE INDEX boot_ident oidspec ON boot_ident USING boot_ident LPAREN.boot_index_params RPAREN 

	ID  shift 20
	.  error

	boot_index_params  goto 77
	boot_index_param  goto 78
	boot_ident  goto 79

state 73
	Boot_DeclareUniqueIndexStmt:  XDECLARE UNIQUE INDEX boot_ident oidspec ON boot_ident USING boot_ident.LPAREN boot_index_params RPAREN 

	LPAREN  shift 80
	.  error


state 74
	Boot_CreateStmt:  XCREATE boot_ident oidspec optbootstrap optsharedrelation optwithoutoids optrowtypeoid LPAREN $$15 boot_column_list.$$16 RPAREN 
	boot_column_list:  boot_column_list.COMMA boot_column_def 
	$$16: .    (16)

	COMMA  shift 82
	.  reduce 16 (src line 187)

	$$16  goto 81

state 75
	boot_column_list:  boot_column_def.    (35)

	.  reduce 35 (src line 371)


state 76
	boot_column_def:  boot_ident.EQUALS boot_ident boot_column_nullness 

	EQUALS  shift 83
	.  error


state 77
	Boot_DeclareIndexStmt:  XDECLARE INDEX boot_ident oidspec ON boot_ident USING boot_ident LPAREN boot_index_params.RPAREN 
	boot_index_params:  boot_index_params.COMMA boot_index_param 

	COMMA  shift 85
	RPAREN  shift 84
	.  error


state 78
	boot_index_params:  boot_index_param.    (25)

	.  reduce 25 (src line 331)


state 79
	boot_index_param:  boot_ident.boot_ident 

	ID  shift 20
	.  error

	boot_ident  goto 86

state 80
	Boot_DeclareUniqueIndexStmt:  XDECLARE UNIQUE INDEX boot_ident oidspec ON boot_ident USING boot_ident LPAREN.boot_index_params RPAREN 

	ID  shift 20
	.  error

	boot_index_params  goto 87
	boot_index_param  goto 78
	boot_ident  goto 79

state 81
	Boot_CreateStmt:  XCREATE boot_ident oidspec optbootstrap optsharedrelation optwithoutoids optrowtypeoid LPAREN $$15 boot_column_list $$16.RPAREN 

	RPAREN  shift 88
	.  error


state 82
	boot_column_list:  boot_column_list COMMA.boot_column_def 

	ID  shift 20
	.  error

	boot_ident  goto 76
	boot_column_def  goto 89

state 83
	boot_column_def:  boot_ident EQUALS.boot_ident boot_column_nullness 

	ID  shift 20
	.  error

	boot_ident  goto 90

state 84
	Boot_DeclareIndexStmt:  XDECLARE INDEX boot_ident oidspec ON boot_ident USING boot_ident LPAREN boot_index_params RPAREN.    (20)

	.  reduce 20 (src line 302)


state 85
	boot_index_params:  boot_index_params COMMA.boot_index_param 

	ID  shift 20
	.  error

	boot_index_param  goto 91
	boot_ident  goto 79

state 86
	boot_index_param:  boot_ident boot_ident.    (26)

	.  reduce 26 (src line 334)


state 87
	Boot_DeclareUniqueIndexStmt:  XDECLARE UNIQUE INDEX boot_ident oidspec ON boot_ident USING boot_ident LPAREN boot_index_params.RPAREN 
	boot_index_params:  boot_index_params.COMMA boot_index_param 

	COMMA  shift 85
	RPAREN  shift 92
	.  error


state 88
	Boot_CreateStmt:  XCREATE boot_ident oidspec optbootstrap optsharedrelation optwithoutoids optrowtypeoid LPAREN $$15 boot_column_list $$16 RPAREN.    (17)

	.  reduce 17 (src line 192)


state 89
	boot_column_list:  boot_column_list COMMA boot_column_def.    (36)

	.  reduce 36 (src line 373)


state 90
	boot_column_def:  boot_ident EQUALS boot_ident.boot_column_nullness 
	boot_column_nullness: .    (40)

	XFORCE  shift 94
	.  reduce 40 (src line 387)

	boot_column_nullness  goto 93

state 91
	boot_index_params:  boot_index_params COMMA boot_index_param.    (24)

	.  reduce 24 (src line 329)


state 92
	Boot_DeclareUniqueIndexStmt:  XDECLARE UNIQUE INDEX boot_ident oidspec ON boot_ident USING boot_ident LPAREN boot_index_params RPAREN.    (21)

	.  reduce 21 (src line 309)


state 93
	boot_column_def:  boot_ident EQUALS boot_ident boot_column_nullness.    (37)

	.  reduce 37 (src line 376)


state 94
	boot_column_nullness:  XFORCE.XNOT XNULL 
	boot_column_nullness:  XFORCE.XNULL 

	XNOT  shift 95
	XNULL  shift 96
	.  error


state 95
	boot_column_nullness:  XFORCE XNOT.XNULL 

	XNULL  shift 97
	.  error


state 96
	boot_column_nullness:  XFORCE XNULL.    (39)

	.  reduce 39 (src line 386)


state 97
	boot_column_nullness:  XFORCE XNOT XNULL.    (38)

	.  reduce 38 (src line 384)

Rule not reduced: error_nothing:  NOTHING 

33 terminals, 31 nonterminals
53 grammar rules, 98/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
80 working sets used
memory: parser 93/240000
2 extra closures
78 shift entries, 1 exceptions
62 goto entries
16 entries saved by goto default
Optimizer space used: output 107/240000
107 table entries, 0 zero
maximum spread: 31, maximum offset: 85
